Создайте класс Person, с полями name, surname, age. Сгенерируйте группу из 100 человек в возрасте от 15 до 30.
выберете объекты, возраст которых меньше 21;
распечатать их на экран;
сортируем по фамилии, а потом по имени (использовать thenComparing у объекта Comparator);
убираем дубли (если name, surname, age одинаковые)
сохраняем в файл, как объект, каждый экземпляр класса Person
читаем из файла
создаем при помощи stream новую коллекцию (List<String>) только из Фамилии и Имени для прочтенных из фалов объектов
выводим на экран